fixed new game button bug
fixed new button bug where it would overlap with the keyboard rows

--- a/src/Game.css
+++ b/src/Game.css
@@ -254,7 +254,7 @@ body {
 .actions {
     display: flex;
     justify-content: center;
-    margin: 12px 0 6px;
+    margin: 12px 0 40px;
 }
 
 .btn {
